cabal-version:      2.4
name:               reactive-banana-vty
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Luke Clifton
maintainer:         lukec@themk.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Reactive.Banana.Dynamic,
        Graphics.Vty.Reactive,
        Graphics.Vty.Reactive.Types,
        Graphics.Vty.Reactive.Widgets

    build-depends:
        base ^>=4.14.3.0,
        mtl,
        text,
        async,
        reactive-banana,
        vty,
        these,
        containers,
    hs-source-dirs:   src
    default-language: Haskell2010
